adds user pagination